--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hexlet",
+  "type": "module",
   "version": "1.0.0",
   "description": "Мой первый проект на Хеклете",
   "main": "index.js",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Nickolay-Klimentov/hexlet-js/issues"
   },
-  "homepage": "https://github.com/Nickolay-Klimentov/hexlet-js#readme"
+  "homepage": "https://github.com/Nickolay-Klimentov/hexlet-js#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
